force-app/main/default/objects/User_Unit__c/fields/Earned_Points__c.field-meta.xml
<CustomField>
    <fullName>Earned_Points__c</fullName>
    <label>Earned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>