force-app/main/default/objects/User_Unit__c/listViews/user_unit_detailed.listView-meta.xml
<ListView>
    <fullName>user_unit_detailed</fullName>
    <columns>NAME</columns>
    <columns>Earned_Points__c</columns>
    <columns>Unit__c</columns>
    <columns>User__c</columns>
    <columns>User_Module__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>user unit detailed</label>
</ListView>